--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,12 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.github.piasy.biv.view.BigImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ivImageDetail"
-    android:background="@color/black"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:failureImage="@drawable/ic_broken_image"
-    app:failureImageInitScaleType="centerCrop"
-    app:optimizeDisplay="true"
-    tools:context=".ui.detail.DetailFragment" />
+    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent" android:layout_width="match_parent">
+
+    <com.github.piasy.biv.view.BigImageView
+        android:id="@+id/ivImageDetail"
+        android:background="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:failureImage="@drawable/ic_broken_image"
+        app:failureImageInitScaleType="centerCrop"
+        app:optimizeDisplay="true"
+        tools:context=".ui.detail.DetailFragment" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnFavorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/_16sdp"
+        app:tint="@null"
+        app:backgroundTint="@color/white"
+        android:src="@drawable/ic_favorite_white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:contentDescription="@string/fab" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
